// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render 1`] = `
<DocumentFragment>
  <div
    class="card "
  >
    <div
      class="card__header"
    >
      <h2
        class="card__title"
      >
        Title
      </h2>
    </div>
    <div
      class="card__content"
    >
      <span>
        Some content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card component should render card with links 1`] = `
<DocumentFragment>
  <div
    class="card "
  >
    <div
      class="card__header"
    >
      <h2
        class="card__title"
      >
        Title
      </h2>
      <div
        class="card__subtitle"
      >
        Subtitle
      </div>
    </div>
    <div
      class="card__actions"
    >
      <div
        class="card__link"
        style="border-color: red;"
      >
        <a
          href="/example.com"
        >
          link
        </a>
      </div>
    </div>
    <div
      class="card__content"
    >
      <span>
        Some content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card component should render card with onclick 1`] = `
<DocumentFragment>
  <div
    class="card  card--has-hover"
    role="button"
    tabindex="0"
  >
    <div
      class="card__header"
    >
      <h2
        class="card__title"
      >
        Title
      </h2>
      <div
        class="card__subtitle"
      >
        Subtitle
      </div>
    </div>
    <div
      class="card__content"
    >
      <span>
        Some content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card component should render card with subtitle 1`] = `
<DocumentFragment>
  <div
    class="card "
  >
    <div
      class="card__header"
    >
      <h2
        class="card__title"
      >
        Title
      </h2>
      <div
        class="card__subtitle"
      >
        Subtitle
      </div>
    </div>
    <div
      class="card__content"
    >
      <span>
        Some content
      </span>
    </div>
  </div>
</DocumentFragment>
`;
